# safetensors.hpp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: pre-commit-autoupdate.yml
benchmark/: CMakeLists.txt  bench.cpp  bench.py  bench_optimized.cpp
cmake/: safetensors_cppConfig.cmake.in
examples/: CMakeLists.txt  README.md  create_test_data.cpp  safe_open_example.cpp
include/safetensors/: mmap.hpp  safetensors.hpp
src/: conversion.rs  lib.rs  mmap.cpp
